--- a/ProjectIKS/src/app/modules/superadmin/request-card/request-card.component.html
+++ b/ProjectIKS/src/app/modules/superadmin/request-card/request-card.component.html
@@ -1,7 +1,7 @@
 <mat-card style="border-radius: 20px">
   <mat-card-content >
     <div fxLayout="row" >
-      <p class="p-description">Details:      {{request.user}}</p>
+      <p class="p-description">Details:      {{request.email}}</p>
       <div fxFlex="0%">
       </div>
       <div fxFlex="20%" fxLayout="column" fxLayoutGap="10px">
