--- a/ProjectIKS/src/app/modules/superadmin/form/form.component.html
+++ b/ProjectIKS/src/app/modules/superadmin/form/form.component.html
@@ -8,26 +8,26 @@
 <body>
 <form>
   <label for="country">Select your country name:</label><br>
-  <input type="text" id="country" name="country"><br><br>
+  <input type="text" id="country" name="country" readonly><br><br>
 
   <label for="state">State/Province:</label><br>
-  <input type="text" id="state" name="state"><br><br>
+  <input type="text" id="state" name="state" readonly><br><br>
 
   <label for="locality">Locality Name:</label><br>
-  <input type="text" id="locality" name="locality"><br><br>
+  <input type="text" id="locality" name="locality" readonly><br><br>
 
   <label for="organization">Organization Name:</label><br>
-  <input type="text" id="organization" name="organization"><br><br>
+  <input type="text" id="organization" name="organization" readonly><br><br>
 
   <label for="unit">Organization Unit Name:</label><br>
-  <input type="text" id="unit" name="unit"><br><br>
+  <input type="text" id="unit" name="unit" readonly><br><br>
 
   <label for="firstName">First name:</label><br>
-  <input type="text" id="firstName" name="firstName"><br><br>
+  <input type="text" id="firstName" name="firstName" readonly><br><br>
   <label for="lastName">Last name:</label><br>
-  <input type="text" id="lastName" name="lastName"><br><br>
+  <input type="text" id="lastName" name="lastName" readonly><br><br>
   <label for="email">Email Address:</label><br>
-  <input type="email" id="email" name="email"><br><br>
+  <input type="email" id="email" name="email" ><br><br>
   <div class="container">
     <label class="checkbox-label">
       <input type="checkbox" name="button11" id="button11"> Basic contraints
