--- a/ProjectIKS/src/app/modules/auth/login/login.component.css
+++ b/ProjectIKS/src/app/modules/auth/login/login.component.css
@@ -16,6 +16,7 @@
 .login-button{
   padding: 20px;
   background-color:#D9D9D9;
+  margin-top: 13px;
 }
 
 .centered-text {
@@ -27,5 +28,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#recaptcha{
+  align-self: center;
 }
 
