--- a/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.html
+++ b/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.html
@@ -31,6 +31,8 @@
             <mat-radio-button value="GUEST" class="white-text">Guest</mat-radio-button>
           </mat-radio-group>
         </div>
+
+        <re-captcha (resolved)="resolved($event)" [siteKey]= environment.recaptchaKey></re-captcha>
         <button mat-button type="submit" id="registerbtn" class="signup-button" [disabled]="!signUp.valid" (click)="registerClicked()">Register</button>
       </form>
     </mat-card>
