--- a/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.css
+++ b/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.css
@@ -16,6 +16,7 @@
 .signup-button{
   padding: 20px;
   background-color:#D9D9D9;
+  margin-top: 13px;
 }
 
 .centered-text {
@@ -40,6 +41,9 @@
   flex-direction: column;
 }
 
+#recaptcha{
+  align-self: center;
+}
 .white-text {
   color: white;
 }
